[package]
name = "set_editor"
version = "0.2.1"
authors = ["Isaac Lozano <109lozanoi@gmail.com>"]

[features]
gui = ["gtk", "lazy_static"]

[dependencies]
sa2_set = {path = "../sa2_set"}
getopts = "0.2"
serde = "1.0"
serde_json = "1.0"
gtk = { version = "0.1.3", optional = true }
lazy_static = { version = "0.2.8", optional = true }
